fix unaligned results text

--- a/src/components/css/searchbar.css
+++ b/src/components/css/searchbar.css
@@ -62,3 +62,7 @@ form {
   height: 35px;
   display: flex;
 }
+
+.result-text {
+  text-align: center;
+}
